[package]
name = "readchat"
version = "0.3.1"
authors = ["museun <museun@outlook.com>"]
edition = "2018"
license = "Unlicense"

[dependencies]
anyhow               = "1.0.32"
crossterm            = "0.18.0"
fastrand             = "1.3.5"
flume                = { version = "0.9.1", default-features = false }
pico-args            = "0.3.4"
twitchchat           = "0.14.4"
unicode-segmentation = "1.6.0"
unicode-width        = "0.1.8"
