[package]
name       = "readchat"
version    = "0.3.5"
repository = "https://github.com/museun/readchat"
authors    = ["museun <museun@outlook.com>"]
edition    = "2018"
license    = "Unlicense"

[dependencies]
anyhow               = "1.0.39"
crossterm            = "0.19.0"
dirs                 = "3.0.1"
fastrand             = "1.4.0"
flume                = { version = "0.10.2", default-features = false }
pico-args            = "0.4.0"
twitchchat           = "0.14.8"
unicode-segmentation = "1.7.1"
unicode-width        = "0.1.8"
