[package]
name    = "readchat"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
anyhow          = "1.0.40"
chrono          = "0.4.19"
crossterm       = "0.19.0"
dirs            = "3.0.2"
fastrand        = "1.4.1"
pico-args       = "0.4.0"
serde           = { version = "1.0.125", features = ["derive"] }
serde_yaml      = "0.8.17"
simple_env_load = "0.1.0"
twitchchat      = { version = "0.14.8", default-features = false }
unicode-width   = "0.1.8"
url             = "2.2.1"
